micro data tags and fb og tags added

--- a/CSCB700 Search Engine Optimization in Web/Project/about.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/about.html
@@ -27,9 +27,28 @@
       name="description"
       content="Culture Events Hub is an online ticket system .The system offers their clinets the latest and most exclusive culture events. The tickets are received on the user's mobile phone for their convenience."
     />
-    <meta name="keywords" content="events, tickets, online ticket system" />
+    <meta
+      name="keywords"
+      content="events, tickets, online ticket system, location, social media, facebook, instagram, linkedin, about"
+    />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
-    
+
+    <meta property="og:title" content="About Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/about.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
+
     <title>Culture Events Hub - About</title>
     <link
       rel="shortcut icon"
@@ -149,7 +168,10 @@
               <a title="About Us" class="dropdown-item" href="about.html"
                 >About us</a
               >
-              <a title="Privacy Policy" class="dropdown-item" href="privacy.html"
+              <a
+                title="Privacy Policy"
+                class="dropdown-item"
+                href="privacy.html"
                 >Privacy Policy</a
               >
               <div class="dropdown-divider"></div>
@@ -226,7 +248,7 @@
       </ol>
     </nav>
     <div class="container custom-container">
-      <h1 class="text-center custom-header">About</h1>
+      <h1 itemprop="title" class="text-center custom-header">About</h1>
       <div class="row">
         <div class="col-12">
           <div class="jumbotron jumbotron-fluid custom-jumbotron">
@@ -250,13 +272,14 @@
           <h6>Find us on google maps pinned location:</h6>
           <h6>Mobile phone: +359 884 695 169</h6>
           <h6>Email: adskidolen@gmail.com</h6>
-          <div class="card">
+          <div class="card" itemscope itemtype="http://schema.org/ImageObject">
             <img
               class="card-img-top"
               src="assets/images/logo.png"
               alt="Logo Image"
               height="300"
               width="300"
+              itemprop="contentUrl"
             />
           </div>
         </div>
@@ -273,7 +296,10 @@
       <div class="row custom-social-container">
         <div class="col-12">
           <h3>Follow us on:</h3>
-          <a title="Facebook Page" href="https://www.facebook.com/paunski777777">
+          <a
+            title="Facebook Page"
+            href="https://www.facebook.com/paunski777777"
+          >
             <i class="fab fa-facebook custom-social-icon"></i>
           </a>
           <a title="Instagram Page" href="https://www.instagram.com/a7paunski/">
