--- a/CSCB700 Search Engine Optimization in Web/Project/login.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/login.html
@@ -24,8 +24,24 @@
       name="description"
       content="Login Page for the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, users, login, online ticket system" />
+    <meta name="keywords" content="events, tickets, users, login, online ticket system, Bulgaria, culture" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
+    <meta property="og:title" content="Login Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/login.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
     
     <title>Culture Events Hub - Login</title>
     <link
@@ -191,7 +207,7 @@
       </nav>
     </div>
     <div class="container login-container">
-      <h1 class="text-center custom-login-register-header">Login</h1>
+      <h1 itemprop="title" class="text-center custom-login-register-header">Login</h1>
       <form>
         <div class="form-group">
           <label for="username">Username</label>
