--- a/CSCB700 Search Engine Optimization in Web/Project/payment.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/payment.html
@@ -24,8 +24,24 @@
       name="description"
       content="The payment proccess in the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, payment, billing details, online ticket system" />
+    <meta name="keywords" content="events, tickets, payment, billing details, online ticket system, credit card, debit card, culture" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
+    <meta property="og:title" content="Payment Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/payment.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
 
     <title>Culture Events Hub - Payment</title>
     <link
@@ -206,7 +222,7 @@
       </ol>
     </nav>
     <div class="container custom-container">
-      <h1 class="text-center custom-header">Payment</h1>
+      <h1 itemprop="title" class="text-center custom-header">Payment</h1>
       <form>
         <div class="form-row custom-radio-buttons-container">
           <div class="form-check form-check-inline">
