--- a/CSCB700 Search Engine Optimization in Web/Project/privacy.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/privacy.html
@@ -24,8 +24,24 @@
       name="description"
       content="The Privacy Policy of the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, privacy policy, online ticket system" />
+    <meta name="keywords" content="events, tickets, privacy policy, online ticket system, culture, Bulgaria" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
+    <meta property="og:title" content="Privacy Policy Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/privacy.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
 
     <title>Culture Events Hub - Privacy Policy</title>
     <link
@@ -223,7 +239,7 @@
       </ol>
     </nav>
     <div class="container custom-container">
-      <h1>Privacy Policy</h1>
+      <h1 itemprop="title">Privacy Policy</h1>
 
       <p>Last updated: January 12, 2020</p>
 
