--- a/CSCB700 Search Engine Optimization in Web/Project/register.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/register.html
@@ -24,8 +24,24 @@
       name="description"
       content="Register page for the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, users, register, online ticket system" />
+    <meta name="keywords" content="events, tickets, users, register, online ticket system, culture, Bulgaria" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
+    <meta property="og:title" content="Register Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/register.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
 
     <title>Culture Events Hub - Register</title>
     <link
@@ -191,7 +207,7 @@
       </nav>
     </div>
     <div class="container login-container">
-      <h1 class="text-center custom-login-register-header">Register</h1>
+      <h1 itemprop="title" class="text-center custom-login-register-header">Register</h1 i>
       <form>
         <div class="form-row">
           <div class="form-group col-md-6">
