--- a/CSCB700 Search Engine Optimization in Web/Project/index.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/index.html
@@ -19,8 +19,25 @@
       name="description"
       content="Culture Events Hub is an online ticket system .The system offers their clinets the latest and most exclusive culture events. The tickets are received on the user's mobile phone for their convenience."
     />
-    <meta name="keywords" content="events, tickets, online ticket system" />
+    <meta name="keywords" content="events, tickets, online ticket system, culture, Bulgaria, culture events" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
+    <meta property="og:title" content="Home Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/index.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
+
     <title>Culture Events Hub</title>
 
     <link rel="shortcut icon" href="assets/logo/favicon.ico" type="image/x-icon">
@@ -167,7 +184,7 @@
       </nav>
     </div>
     <div class="container custom-container">
-      <h1>Welcome to Culture Events Hub!</h3>
+      <h1 itemprop="title">Welcome to Culture Events Hub!</h3>
         <div id="eventsCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner custom-carousel">
             <div class="carousel-item active">
