--- a/CSCB700 Search Engine Optimization in Web/Project/ticket-bought.html
+++ b/CSCB700 Search Engine Optimization in Web/Project/ticket-bought.html
@@ -24,8 +24,24 @@
       name="description"
       content="Successfull payment in the Culture Events Hub."
     />
-    <meta name="keywords" content="events, tickets, online ticket system" />
+    <meta name="keywords" content="events, tickets, online ticket system, culture, Bulgaria, payment" />
     <meta name="author" content="Alexander Paunski and Momchil Dimitrov" />
+
+    <meta property="og:title" content="Confirmation Page" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://cultureeventshub.000webhostapp.com/ticket-bought.html"
+    />
+    <meta
+      property="og:image"
+      content="https://cultureeventshub.000webhostapp.com/assets/logo/favicon.ico"
+    />
+    <meta property="og:site_name" content="Culture Events Hub" />
+    <meta
+      property="og:description"
+      content="Culture Events Hub - Online Ticket System"
+    />
 
     <title>Culture Events Hub - Confirmation</title>
     <link
@@ -193,11 +209,11 @@
     <div class="container custom-container">
       <div class="card custom-successfull-payment-card">
         <div class="card-header custom-table-head">
-          <h3>Payment successfull!</h3>
+          <h3 itemprop="title">Payment successfull!</h3>
         </div>
         <div class="card-body">
           <blockquote class="blockquote mb-0">
-            <p>
+            <p itemprop="description">
               Confirmation details and your ticket have been sent on your email
               address!
             </p>
